--- a/resources/views/layouts/default.haml
+++ b/resources/views/layouts/default.haml
@@ -1,3 +1,4 @@
+-$layout=new App\Layout
 !!!
 %html
 	%head
@@ -10,7 +11,7 @@
 		%meta(name='msapplication-tap-highlight' content='no')
 
 		-# -# Inject page meta tags
-		-# != Layout::meta()
+		-# != $layout->meta()
 
 		-# CSRF token for lifting out by JS for AJAX requests
 		%meta(name='csrf-token' content=csrf_token())
@@ -21,7 +22,7 @@
 		-# 	!= file_get_contents(base_path('resources/assets/vendor/modernizr.js'))
 
 		-# Stylesheets
-		-# != Layout::webpackAssetTag('app.css')
+		!= $layout->webpackAssetTag('app.css')
 
 	%body
 
@@ -29,4 +30,4 @@
 		#main!= $content
 
 		-# JS
-		-# != Layout::webpackAssetTag('app.js')
+		!= $layout->webpackAssetTag('app.js')
