--- a/resources/views/pages/home.haml
+++ b/resources/views/pages/home.haml
@@ -1,1 +1,8 @@
 %h1 Get Risque, Dwags.
+
+-if($user = Auth::user())
+	%p You're logged in as #{$user->email}
+	%a(href='/logout') Logout
+
+-else
+	%a(href='/login') Login
