stubbing game creation

--- a/resources/views/pages/game/new.haml
+++ b/resources/views/pages/game/new.haml
@@ -3,3 +3,7 @@
 -$users = App\User::get()
 -foreach($users as $user)
 	%p=$user->name
+
+!=Former::open(route('create new game'))
+!=Former::submit('Start')
+!=Former::close()
