game creation stubbed out

--- a/resources/views/pages/game/index.haml
+++ b/resources/views/pages/game/index.haml
@@ -1,1 +1,8 @@
-%h1 Games
+%h1 Game Board
+%h3=$game->name
+
+-foreach($game->users as $user)
+	%li
+		=$user->pivot->name
+		-if($user->pivot->turnt)
+			%span(style="color:red;") [TURN]
