global user context for views

--- a/resources/views/layouts/default.haml
+++ b/resources/views/layouts/default.haml
@@ -21,6 +21,7 @@
 		-# %script(type="text/javascript")
 		-# 	!= file_get_contents(base_path('resources/assets/vendor/modernizr.js'))
 
+		%link(href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
 		-# Stylesheets
 		!= $layout->webpackAssetTag('app.css')
 
