--- a/resources/assets/start/app.styl
+++ b/resources/assets/start/app.styl
@@ -1,5 +1,19 @@
+@import "~normalize.css"
+@require "../stylus/**"
+
 body
 	background #f0f0f0
 	color #333
 	font-family 'Open Sans'
 	font-weight 400
+
+#main
+	padding 20px
+
+a
+	text-decoration none
+	color inherit
+	transition color 150ms 0ms ease-in-out
+
+	&:hover
+		color darken(red,25%)
