--- a/resources/views/layouts/default.haml
+++ b/resources/views/layouts/default.haml
@@ -22,6 +22,8 @@
 		-# 	!= file_get_contents(base_path('resources/assets/vendor/modernizr.js'))
 
 		%link(href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
+		%link(href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css')
+
 		-# Stylesheets
 		!= $layout->webpackAssetTag('app.css')
 
