started map editor

--- a/resources/assets/start/app.styl
+++ b/resources/assets/start/app.styl
@@ -1,6 +1,12 @@
 @import "~normalize.css"
 @require "../stylus/**"
 
+html
+	box-sizing border-box
+
+*, *:before, *:after
+	box-sizing inherit
+
 body
 	background #f0f0f0
 	color #333
@@ -20,3 +26,6 @@ a
 
 td
 	padding 7px
+
+p
+	margin 0 0 10px 0
