--- a/resources/assets/stylus/header.styl
+++ b/resources/assets/stylus/header.styl
@@ -4,6 +4,7 @@
 	border-bottom 1px solid #ccc
 	line-height 30px
 	vertical-align middle
+	background white
 
 	.logo
 		font-family 'Black Ops One'
