testing map army population

--- a/resources/assets/start/app.styl
+++ b/resources/assets/start/app.styl
@@ -1,4 +1,5 @@
-@import "~normalize.css"
+@require '~normalize.css/normalize.css'
+@require '~stylus-library/boilerplate'
 @require "../stylus/**"
 
 html
