--- a/resources/assets/stylus/player-settings.styl
+++ b/resources/assets/stylus/player-settings.styl
@@ -5,3 +5,13 @@
 		width 25px
 		height 25px
 		text-align center
+
+		input
+			width 15px
+			height 15px
+			background white
+			border none
+			border-radius 50%
+
+			&:checked
+				background black
