--- a/resources/views/pages/game/index.haml
+++ b/resources/views/pages/game/index.haml
@@ -8,8 +8,7 @@
 
 -else if($game->state == $states['PLAYER_TURN'])
 	%p player turn
-	%map-view(:map=$game->getJsonMap()
-		layout="game")
+	%game-view(:game=$game)
 
 -else if($game->state == $states['TURN_IN_PROGRESS'])
 	%p player turn in progress
